# dag

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  maskfile.md  shell.nix  test.nix
.github/workflows/: ci.yml
bindings/node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
bindings/node/src/: lib.rs
bindings/node/test/: dag.test.js
bindings/python/: Cargo.toml  dag.pyi  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_dag.py  test_hypothesis_dag.py  test_json_integers.py
bindings/python/tests/fixtures/: cyclic_two_node.json
core/: Cargo.toml
core/src/: error.rs  graph.rs  ids.rs  json.rs  lib.rs  policy.rs  tests.rs
examples/: example.py  example.ts
