[package]
name = "dag-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json", "slotmap/serde"]
# Expose `NodeId::from_raw` / `EdgeId::from_raw` for FFI (e.g. the Node.js binding).
raw-id-access = []

[dependencies]
serde_json = { version = "1", optional = true }
slotmap = "1"
thiserror = "1"
serde = { version = "1", optional = true }
