[package]
name = "dag-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dag-core = { workspace = true, features = ["serde", "raw-id-access"] }
serde_json = { workspace = true }
napi = { version = "2", features = ["napi4", "serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
