[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dag"
version = "0.1.0"
description = "Python bindings for the dag-core DAG library"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7", "hypothesis>=6"]

[tool.maturin]
module-name = "dag"
manifest-path = "Cargo.toml"
features = ["pyo3/extension-module"]
